--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
-.vercel
-.env*.local
+# Node modules
 node_modules/
-.next/
-out/
+
+# Build output
+build/
 dist/
+.next/
+
+# Env files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
