--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-hook-form": "^7.54.1",
     "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
